k8s/3-ingress/OLD-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 3-ingress-microservices
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
  - hosts:
    - conta.ms.fernandoe.com
    secretName: conta-ms-fernandoe-com-tls
  rules:
  - host: conta.ms.fernandoe.com
    http:
      paths:
      - path:
        backend:
          serviceName: conta
          servicePort: 80
  - host: endereco.ms.fernandoe.com
    http:
      paths:
      - path:
        backend:
          serviceName: endereco
          servicePort: 80
  - host: pagamento.ms.fernandoe.com
    http:
      paths:
      - path:
        backend:
          serviceName: pagamento
          servicePort: 80
  - host: pessoa.ms.fernandoe.com
    http:
      paths:
      - path:
        backend:
          serviceName: pessoa
          servicePort: 80
