k8s/3-ingress/ingress-ms.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-microservices
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: conta.ms.fernandoe.com
      http:
        paths:
          - backend:
              serviceName: conta
              servicePort: 80
  tls:
      - hosts:
          - conta.ms.fernandoe.com
        secretName: conta-ms-fernandoe-com-tls
